LIST OF CHANGES
---------------

release 52.0.4
 - bug fix: change path for a file with LSF commands to a path in
   outgoing for jobs that run after the run was moved to the outgoing
   directory

release 52.0.3
 - bug fix: use analysis_path instaed of bam_basecall_path in a method
   that is used by both analysis and archival pipelines; the value of
   bam_basecall_path is available only when explicitly set, ie only
   in the analysis pipeline

release 52.0.2
 - allocate more memory to sequence_error and insert_size autoqc
   checks since they now use newer bwa, which creates twice larger
   reference index

release 52.0.1
 - alignment of tag#0 not done by default (align_tag0 flag added)

release 52.0
 - remove dependency of tests of LIMs XML, use samplesheet instead
 - remove dependency on tracking XML feeds
 - update p4 stage1 default values in general_values.ini
     restored p4_stage1_split_threads_count=4
 - removed illumina_basecall_stats function and associated code
 - remove generation of empty fastq and fastqcheck files
 - removed bam2fastqcheck_and_cached_fastq function
 - removed create_archive_directory function, scaffolding the runfolder
   is called in the beginning of the pipeline within the 'prepare'
   method of the analysis pipeline
 - increased number of threads for p4 stage1 (newer bambi version required)
 - added LSF-independent evaluation for number of threads
 - removed redundant dependency on illumina2bam jars
 - stopped forcing ownership and permissions when creating
   new directories
 - single log directory for all jobs with per-function subdirectories
 - added LSF-independent for number of threads
 - added wr executor
 - new modules to execute submission of definitions to LSF
 - captured dependencies between pipeline steps in a directed acyclic graph
 - moved flags, attributes and method related to the overall
   pipeline logic to npg_pipeline::pluggable
 - flattened directory structure for modules implementing functions,